# app/Domains/Auth/Requests/RegistrationRequest.php
@@ -1,0 +1,32 @@
+<?php
+
+namespace App\Domains\Auth\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class RegistrationRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        return [
+            'name'=>['required','regex:/(^[A-Za-z ]+$)+/','min:2','max:32'],
+            'email'=>['required','email','unique:users,email'],
+            'password'=>['required','string','min:8','confirmed'],
+        ];
+    }
+}
