# app/Services/Notification/routes/api.php
@@ -4,4 +4,6 @@
 use App\Services\Notification\Http\Controllers\NotificationController;
 use Illuminate\Support\Facades\Route;
 
-Route::apiResource('notification','NotificationController')->except(['update','destroy']);
+Route::group(['middleware' => ['auth:sanctum']], function () {
+    Route::apiResource('notification', 'NotificationController')->except(['update', 'destroy']);
+});
